updating refs to Sync logo

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Sync Savings API</title>
     <link rel="stylesheet" type="text/css" href="dist/swagger-ui.css" />
     <link rel="stylesheet" type="text/css" href="dist/index.css" />
-    <link rel="icon" type="image/png" href="dist/sync_logo.jpeg" sizes="32x32" />
-    <link rel="icon" type="image/png" href="dist/sync_logo.jpeg" sizes="16x16" />
+    <link rel="icon" type="image/png" href="dist/sync_logo.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="dist/sync_logo.png" sizes="16x16" />
   </head>
 
   <body>
